fix dark mode offshore screen

--- a/napa-solution/components/offshore/Benefit/style.module.css
+++ b/napa-solution/components/offshore/Benefit/style.module.css
@@ -87,7 +87,7 @@
     margin-bottom: 0;
   }
   .item > img {
-    width: 450px;
+    width: 430px;
   }
   .wrapContainer{
     margin: 100px 50px 0px 100px
